src/test/ui/proc-macro/invalid-punct-ident-3.stderr
error: proc macro panicked
  --> $DIR/invalid-punct-ident-3.rs:6:1
   |
LL | invalid_raw_ident!(); //~ ERROR proc macro panicked
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: `"self"` is not a valid raw identifier

error: aborting due to previous error

